introduced consumer state to read messages independently by different consumers